force-app/main/default/objects/Expense__c/fields/Is_Recurrent__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurrent__c</fullName>
    <formula>NOT(
				ISBLANK(
								TEXT(Recurrence_Periodicity__c)
				)
)</formula>
    <label>Is Recurrent</label>
    <type>Checkbox</type>
</CustomField>