force-app/main/default/objects/Expense__c/fields/No_Recurrences__c.field-meta.xml
<CustomField>
    <fullName>No_Recurrences__c</fullName>
    <label>No of Recurrences</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>