force-app/main/default/objects/Expense__c/fields/Recurrence_Periodicity__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Periodicity__c</fullName>
    <label>Recurrence Periodicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>