force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Category__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Is_Recurrent__c</columns>
    <columns>Recurrence_Periodicity__c</columns>
    <columns>No_Recurrences__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>